Fixed last minute typos

--- a/Manuscripts/post-cogpsych/post-cogpsych.tex
+++ b/Manuscripts/post-cogpsych/post-cogpsych.tex
@@ -380,7 +380,7 @@ generation is presumably random.
 
 To our knowledge, no prior literature has yet explicitly discussed any empirical
 effects of contrast in category generation. However, some evidence of contrast
-can be seen in the data from Experiment 3 of cite{jern2013probabilistic}. We
+can be seen in the data from Experiment 3 of \cite{jern2013probabilistic}. We
 leave a detailed analysis of this data to the supplemental materials.
 
 \subsection{Contrast as exemplar dissimilarity: The PACKER Model}
@@ -2326,7 +2326,7 @@ where $\theta$ is a response determinism parameter and ${\rm Normal}(y; \mu,
 \Sigma)$ denotes a multivariate Normal density evaluated at $y$.
 
 \newpage
-\section{Representativeness Model in Toroidal Space.}
+\section{Representativeness Model in Toroidal Space}
 \label{ap:wrapgauss}
 
 Assuming a single bounded feature, we can easily represent the probability
