--- a/Experiments/cogpsych-code/plot_modelcompare_ind.ipynb
+++ b/Experiments/cogpsych-code/plot_modelcompare_ind.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -136,63 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ppt: 318\n",
-      "[ 0.    -1.125]\n",
-      "[ 0.    -1.125]\n",
-      "[ 0.    -1.125]\n",
-      "[[0.9127657 0.       ]\n",
-      " [0.        0.3877657]]\n",
-      "[[0.152 0.193 0.229 0.254 0.263 0.254 0.229 0.193 0.152]\n",
-      " [0.131 0.166 0.197 0.218 0.226 0.218 0.197 0.166 0.131]\n",
-      " [0.099 0.125 0.149 0.165 0.171 0.165 0.149 0.125 0.099]\n",
-      " [0.071 0.09  0.107 0.119 0.123 0.119 0.107 0.09  0.071]\n",
-      " [0.06  0.077 0.091 0.101 0.105 0.101 0.091 0.077 0.06 ]\n",
-      " [0.071 0.09  0.107 0.119 0.123 0.119 0.107 0.09  0.071]\n",
-      " [0.099 0.125 0.149 0.165 0.171 0.165 0.149 0.125 0.099]\n",
-      " [0.131 0.166 0.197 0.218 0.226 0.218 0.197 0.166 0.131]\n",
-      " [0.152 0.193 0.229 0.254 0.263 0.254 0.229 0.193 0.152]]\n",
-      "[0.5 0.5]\n",
-      "[0.5 0.5]\n",
-      "[ 0.31363556 -0.10568443]\n",
-      "[[0.96212805 0.16042765]\n",
-      " [0.16042765 0.90915557]]\n",
-      "[[0.072 0.098 0.124 0.147 0.164 0.171 0.168 0.154 0.133]\n",
-      " [0.075 0.102 0.129 0.154 0.171 0.178 0.174 0.159 0.137]\n",
-      " [0.078 0.106 0.134 0.16  0.178 0.186 0.182 0.166 0.143]\n",
-      " [0.078 0.107 0.136 0.163 0.182 0.191 0.188 0.172 0.148]\n",
-      " [0.077 0.105 0.135 0.162 0.182 0.191 0.189 0.174 0.151]\n",
-      " [0.074 0.101 0.13  0.156 0.176 0.186 0.185 0.171 0.149]\n",
-      " [0.071 0.097 0.124 0.15  0.169 0.179 0.177 0.165 0.143]\n",
-      " [0.069 0.094 0.12  0.145 0.163 0.172 0.17  0.158 0.137]\n",
-      " [0.07  0.095 0.12  0.144 0.161 0.169 0.166 0.154 0.133]]\n",
-      "[0. 0.]\n",
-      "[0. 0.]\n",
-      "[ 0.         -0.41931999]\n",
-      "[[1.0127657  0.1       ]\n",
-      " [0.1        0.73766262]]\n",
-      "[[0.11  0.136 0.157 0.171 0.175 0.168 0.152 0.129 0.103]\n",
-      " [0.118 0.145 0.169 0.184 0.189 0.182 0.165 0.14  0.112]\n",
-      " [0.12  0.149 0.174 0.191 0.196 0.19  0.173 0.148 0.119]\n",
-      " [0.117 0.146 0.171 0.188 0.195 0.189 0.173 0.149 0.12 ]\n",
-      " [0.109 0.136 0.16  0.177 0.184 0.18  0.165 0.142 0.115]\n",
-      " [0.101 0.126 0.148 0.164 0.17  0.166 0.153 0.132 0.107]\n",
-      " [0.096 0.119 0.139 0.153 0.159 0.155 0.142 0.122 0.099]\n",
-      " [0.096 0.119 0.138 0.151 0.156 0.151 0.137 0.118 0.095]\n",
-      " [0.102 0.125 0.145 0.158 0.162 0.156 0.142 0.121 0.097]]\n",
-      "[-0.33333333 -1.08333333]\n",
-      "[-0.33333333 -1.08333333]\n",
-      "[-0.20909037 -1.0988637 ]\n",
-      "[[ 1.05137119 -0.07357569]\n",
-      " [-0.07357569  0.46727516]]\n",
-      "[[0.171 0.2   0.22  0.228 0.223 0.205 0.177 0.145 0.111]\n",
-      " [0.157 0.182 0.199 0.205 0.199 0.181 0.156 0.126 0.096]\n",
-      " [0.13  0.15  0.163 0.167 0.161 0.146 0.125 0.101 0.077]\n",
-      " [0.103 0.119 0.129 0.132 0.128 0.116 0.1   0.081 0.062]\n",
-      " [0.087 0.102 0.112 0.116 0.114 0.105 0.092 0.075 0.058]\n",
-      " [0.091 0.107 0.12  0.126 0.125 0.117 0.104 0.086 0.068]\n",
-      " [0.112 0.133 0.149 0.158 0.158 0.148 0.131 0.109 0.086]\n",
-      " [0.141 0.167 0.187 0.197 0.196 0.183 0.161 0.134 0.104]\n",
-      " [0.164 0.193 0.215 0.225 0.221 0.205 0.179 0.148 0.114]]\n"
+      "Ppt: 318\n"
      ]
     }
    ],
@@ -340,34 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "0.029274915762159587"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def tempfun():\n",
-    "    return 1,2,3\n",
-    "\n",
-    "a,b,c = tempfun()\n",
-    "b\n"
+    "funcs.invwishartpdf(np.eye(2),np.eye(2),2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -460,27 +393,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1. ,  1.5],\n",
-       "       [ 1. ,  1.5]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "shift_exm"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -550,6 +462,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.005 0.004 0.003 0.002 0.002 0.002 0.003 0.004 0.005]\n",
+      " [0.008 0.005 0.004 0.003 0.003 0.003 0.004 0.005 0.008]\n",
+      " [0.016 0.01  0.008 0.006 0.006 0.006 0.008 0.01  0.016]\n",
+      " [0.036 0.023 0.017 0.014 0.014 0.014 0.017 0.023 0.036]\n",
+      " [0.053 0.035 0.026 0.021 0.02  0.021 0.026 0.035 0.053]\n",
+      " [0.036 0.023 0.017 0.014 0.014 0.014 0.017 0.023 0.036]\n",
+      " [0.016 0.01  0.008 0.006 0.006 0.006 0.008 0.01  0.016]\n",
+      " [0.008 0.005 0.004 0.003 0.003 0.003 0.004 0.005 0.008]\n",
+      " [0.005 0.004 0.003 0.002 0.002 0.002 0.003 0.004 0.005]]\n",
+      "[[0.005 0.004 0.003 0.002 0.002 0.002 0.003 0.004 0.005]\n",
+      " [0.005 0.004 0.003 0.002 0.002 0.002 0.003 0.004 0.005]\n",
+      " [0.008 0.005 0.004 0.003 0.003 0.003 0.004 0.005 0.008]\n",
+      " [0.016 0.01  0.008 0.006 0.006 0.006 0.008 0.01  0.016]\n",
+      " [0.036 0.023 0.017 0.014 0.014 0.014 0.017 0.023 0.036]\n",
+      " [0.053 0.035 0.026 0.021 0.02  0.021 0.026 0.035 0.053]\n",
+      " [0.035 0.023 0.017 0.014 0.014 0.014 0.017 0.023 0.035]\n",
+      " [0.016 0.01  0.008 0.006 0.006 0.006 0.008 0.01  0.016]\n",
+      " [0.008 0.005 0.004 0.003 0.003 0.003 0.004 0.005 0.008]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#HOW COME REP FAILS THE TRANSLATION TEST?!\n",
+    "#aaahh... because it's not computing the empirical means and covmats correctly -- doesn't take into account the wrap.\n",
+    "\n",
+    "wrap_ax = 1\n",
+    "model = RepresentJK13\n",
+    "params = best_params[model.model]\n",
+    "params['category_mean_bias'] = 0\n",
+    "categories1 = [np.array([[-1.,-1.],[1.,-1.],[-1.,1.],[1.,1.]])]\n",
+    "temp1 = model(categories1,params,trialppt.stimrange,wrap_ax=wrap_ax).get_generation_ps(trialppt.stimuli,1,'generate',wrap_ax=wrap_ax)\n",
+    "print(np.round(np.reshape(temp1,(9,9)),3))\n",
+    "categories2 = [np.array([[-1.,-1.],[1.,-1.],[-1.,-.75],[1.,-.75]])]\n",
+    "temp2 = model(categories2,params,trialppt.stimrange,wrap_ax=wrap_ax).get_generation_ps(trialppt.stimuli,1,'generate',wrap_ax=wrap_ax)\n",
+    "print(np.round(np.reshape(temp2,(9,9)),3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -609,6 +567,7 @@
    "source": [
     "#HOW COME REP FAILS THE TRANSLATION TEST?!\n",
     "#aaahh... because it's not computing the empirical means and covmats correctly -- doesn't take into account the wrap.\n",
+    "# Ok should be fixed now 300719\n",
     "\n",
     "wrap_ax = 1\n",
     "model = RepresentJK13\n",
