Standardised wrap_ax as model property. Now to work on getting correct ps from GCM models.

--- a/Experiments/cogpsych-code/test_multiple_cats.ipynb
+++ b/Experiments/cogpsych-code/test_multiple_cats.ipynb
@@ -101,6 +101,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1.0==1\n",
+    "type(1) == int\n",
+    "a = None\n",
+    "not type(1.0) is int or not a == None"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
