--- a/Experiments/cogpsych-code/plot_modelcompare_ind_dummy.ipynb
+++ b/Experiments/cogpsych-code/plot_modelcompare_ind_dummy.ipynb
@@ -343,38 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'categories': [array([ 0, 10, 70, 80]), array([], dtype=int64)],\n",
-       "  'participant': array([10]),\n",
-       "  'response': array([8]),\n",
-       "  'wrap_ax': array([None], dtype=object)},\n",
-       " {'categories': [array([ 0, 10, 70, 80]), array([8])],\n",
-       "  'participant': array([10]),\n",
-       "  'response': array([80]),\n",
-       "  'wrap_ax': array([None], dtype=object)},\n",
-       " {'categories': [array([ 0, 10, 70, 80]), array([ 8, 80])],\n",
-       "  'participant': array([10]),\n",
-       "  'response': array([71]),\n",
-       "  'wrap_ax': array([None], dtype=object)},\n",
-       " {'categories': [array([ 0, 10, 70, 80]), array([ 8, 71, 80])],\n",
-       "  'participant': array([10]),\n",
-       "  'response': array([62]),\n",
-       "  'wrap_ax': array([None], dtype=object)}]"
+       "(array([4, 5]),)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tempt = generateOnePerm(10,generation,stimuli)\n",
-    "tempt.Set"
+    "a = [1,2,3,None,0,0,2]\n",
+    "np.where(np.array(a) == 0)"
    ]
   },
   {
