Reorganised stimsteps -- now it is intialised when trialsets are initialised.

--- a/Manuscripts/post-cogpsych/post-cogpsych.tex
+++ b/Manuscripts/post-cogpsych/post-cogpsych.tex
@@ -1717,12 +1717,16 @@ distribution for circular dimensions, the Von Mises distribution, is an
 approximation to the wrapped Gaussian distribution. See Appendix B for
 implementational details of the representativeness model in toroidal space.
 
-For the representativeness model, the single unbounded feature essentially
-prevents the formation of edge effects along that feature. Consequently, this results in higher probabilities of the generating the first Beta exemplars along the edges of the bounded feature (Figure \ref{fig:e3-circles}c). As this
-model does not explicitly recognize similarities as distances along the feature
-space (unlike PACKER), it does not experience the compression in density regions
-along the unbounded feature axis. Intuitively, this suggests that the
-representativeness model (which prefers generating exemplars at the boundaries) will prefer to generate stimuli on the boundaries of the bounded feature with some amount of variance over unbounded feature.
+The single unbounded feature prevents ... While the representativeness model
+more closely resembles PACKER under this condition, note that the former still
+more strongly predicts the generation of the first Betas exemplars at the
+bounded edges compared to PACKER (Figure \ref{fig:e3-circles}c.) 
+% For the representativeness model, the single unbounded feature essentially
+% prevents the formation of edge effects along that feature. Consequently, this results in higher probabilities of the generating the first Beta exemplars along the edges of the bounded feature (Figure \ref{fig:e3-circles}c). As this
+% model does not explicitly recognize similarities as distances along the feature
+% space (unlike PACKER), it does not experience the compression in density regions
+% along the unbounded feature axis. Intuitively, this suggests that the
+% representativeness model (which prefers generating exemplars at the boundaries) will prefer to generate stimuli on the boundaries of the bounded feature with some amount of variance over unbounded feature.
 
 
 % We have identified the conditions under which the contrast models may make
@@ -1749,6 +1753,8 @@ generation phase. The training condition was the Corner category for all
 participants.
 
 \subsection{Results and Discussion}
+
+%Repeat hypotheses
 
 
 \begin{figure}
